<resources>
    <string name="app_name">ISOGUM</string>
    <string name="function_name">Functions</string>
    <string name="create_name">Create</string>
    <string name="action_settings">Settings</string>
    <string name="new_function">Create new function</string>
    <string name="new_variable">Create new variable</string>
    <string name="create_new_function_name">Name:</string>
    <string name="create_new_function">Function:</string>
    <string name="create_new_variable_name">Name:</string>
    <string name="create_new_variable_value">Value:</string>
    <string name="create_new_variable_uncertainty">Uncertainty:</string>
    <string name="create_new_save">Save</string>
    <string name="create_new_cancel">Cancel</string>
    <string name="title_activity_app_nav">AppNav</string>
    <string name="title_function">Functions</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_variable">Variables</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_functions">FunctionsActivity</string>
    <string name="title_activity_variable">VariableActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name_variable_header">Variable</string>
    <string name="name_new_variable">Name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="run_name">Run</string>
    <string name="select">Select...</string>
    <string name="not_chosen_error">Please select all variables.</string>
    <string name="Okay">Okay</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="function_symbol">f(x...)</string>
    <string name="app_title">ISO GUM Calculator</string>
    <string name="create_new">Create New...</string>
    <string name="x_equals">x=...</string>
    <string name="title_plus_minus">+/- </string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_0">0</string>
    <string name="number_point">.</string>
    <string name="operator_minus">-</string>
    <string name="left">Left</string>
    <string name="delete">Delete</string>
    <string name="right">Right</string>
    <string name="asin">aSin</string>
    <string name="acos">ACos</string>
    <string name="atan">atan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="paren">()</string>
    <string name="right_paren">)</string>
    <string name="divide">%</string>
    <string name="pow">^</string>
    <string name="times">x</string>
    <string name="exp">e</string>
    <string name="pi">pi</string>
    <string name="plus">+</string>
    <string name="variable">variable</string>
    <string name="nav">nav</string>
    <string name="enter_name_hint">Enter name here...</string>
    <string name="sort_bar_title">Sort by...</string>
    <string name="function_delete">Delete</string>
    <string name="function_edit">Edit</string>
    <string name="function_run">Run</string>
    <string name="output_variable_header">Name Output Variable...</string>
    <string name="output_variable_hint">Enter the name here.</string>
    <string name="duplicate_variable_message">Variable name already exists, overwrite?</string>
    <string name="duplicate_function_message">Function name already exists, overwrite?</string>
    <string name="function_radio_name">Function</string>
    <string name="variable_radio_name">Variable</string>
    <string name="enter_name_here">Enter name here...</string>

</resources>
