<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nsccsclub.isogum.CreateVariableFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/create_variable_variable_field">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/x_equals"
            android:id="@+id/textView"
            android:padding="@dimen/field_margin" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:padding="@dimen/field_margin"
            android:singleLine="true"
            android:inputType="none"
            tools:targetApi="lollipop" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_variable_uncertainty_field"
        android:layout_below="@+id/create_variable_variable_field">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_plus_minus"
            android:id="@+id/textView3"
            android:padding="@dimen/field_margin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:padding="@dimen/field_margin"
            android:singleLine="true"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/create_variable_uncertainty_field"
        android:id="@+id/create_varaible_keys">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:baselineAligned="false">
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_7"
                    android:id="@+id/num7"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_8"
                    android:id="@+id/num8"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_9"
                    android:id="@+id/num9"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:baselineAligned="false">


                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_4"
                    android:id="@+id/num4"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_5"
                    android:id="@+id/num5"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_6"
                    android:id="@+id/num6"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:baselineAligned="false">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_1"
                    android:id="@+id/num1"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_2"
                    android:id="@+id/num2"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_3"
                    android:id="@+id/num3"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:paddingBottom="1dp"
            android:baselineAligned="false">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_0"
                    android:id="@+id/num0"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/number_point"
                    android:id="@+id/point"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/operator_minus"
                    android:id="@+id/neg"
                    android:layout_weight=".33"
                    android:onClick="onTextButton"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/left"
                android:id="@+id/left"
                android:layout_weight=".33"
                android:onClick="onTextButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/delete"
                android:id="@+id/del"
                android:layout_weight=".33"
                android:onClick="onTextButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/right"
                android:id="@+id/right"
                android:layout_weight=".33"
                android:onClick="onTextButton"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:paddingTop="1dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_weight=".5"
                android:layout_marginRight="1dp"
                android:onClick="onActionButton"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_weight=".5"
                android:layout_marginLeft="1dp"
                android:onClick="onActionButton"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
