<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_variable_header"
            android:id="@+id/name_variable_header"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="false" />


    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name_new_variable"
        android:hint="@string/enter_name_hint"

        android:id="@+id/name_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@id/name_label"

        android:id="@+id/varaible_name_field"
        android:singleLine="true" />





</LinearLayout>
